<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.unearthed</groupId>
        <artifactId>master</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../</relativePath>
    </parent>


    <artifactId>monitoring</artifactId>
    <name>monitoring</name>

    <properties>
        <maven.compiler.source>1.6</maven.compiler.source>
        <maven.compiler.target>1.6</maven.compiler.target>
        <gwt.version>2.5.1</gwt.version>
    </properties>

    <packaging>war</packaging>

    <repositories>

        <!--<repository>-->
            <!--<id>google</id>-->
            <!--<name>Google</name>-->
            <!--<url>http://maven.eclipse.org/nexus/content/groups/build</url>-->
        <!--</repository>-->


    </repositories>

    <build>
        <defaultGoal>clean install</defaultGoal>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwt.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <runTarget><![CDATA[/SystemMonitoring.html]]></runTarget>
                    <modules>
                        <module>com.inventive.system.monitoring.gwt.SystemMonitoring</module>
                    </modules>
                    <debugSuspend>false</debugSuspend>
                    <warSourceDirectory>${project.basedir}/webapp</warSourceDirectory>
                    <webappDirectory>${project.basedir}/webapp</webappDirectory>
                    <hostedWebapp>${project.basedir}/webapp</hostedWebapp>
                    <inplace>true</inplace>
                    <extraJvmArgs>-XX:MaxPermSize=512M -Xmx1024M</extraJvmArgs>
                    <style>OBF</style>
                    <draftCompile>false</draftCompile>
                    <soyc>false</soyc>
                    <logLevel>INFO</logLevel>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <finalName>hazelcast-storage-node-${project.version}</finalName>
                    <descriptors>
                        <descriptor>./src/main/assembly/assembly.xml</descriptor>
                    </descriptors>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>

        <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>3.0.1</version>
                <scope>provided</scope>
        </dependency>

        <!-- Spring -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
        </dependency>

        <!-- Apache commons -->

        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.2.2</version>
            <optional>false</optional>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.1.1</version>
            <optional>false</optional>
        </dependency>
        <dependency>
            <groupId>commons-pool</groupId>
            <artifactId>commons-pool</artifactId>
            <optional>false</optional>
        </dependency>

        <!-- End apache commons -->


        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>javax.persistence</artifactId>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>eclipselink</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.5.11</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.5.11</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
        </dependency>


        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
        </dependency>

        <!-- Caching -->
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast-all</artifactId>
        </dependency>

        <!-- GWT -->
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwt.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${gwt.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-dev</artifactId>
            <version>${gwt.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt.google-apis</groupId>
            <artifactId>gwt-visualization</artifactId>
            <version>1.1.1</version>
            <optional>false</optional>
        </dependency>

        <dependency>
            <groupId>com.google.gwt.inject</groupId>
            <artifactId>gin</artifactId>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <!--<scope>compile</scope>-->
        </dependency>
        <dependency>
        	<groupId>com.allen-sauer.gwt.dnd</groupId>
        	<artifactId>gwt-dnd</artifactId>
        </dependency>
        <dependency>
        	<groupId>org.apache.felix</groupId>
        	<artifactId>org.osgi.core</artifactId>
        </dependency>
        <dependency>
        	<groupId>org.apache.felix</groupId>
        	<artifactId>org.apache.felix.framework</artifactId>
        </dependency>
        <dependency>
        	<groupId>org.apache.felix</groupId>
        	<artifactId>org.apache.felix.scr.annotations</artifactId>
        </dependency>

        <dependency>
            <groupId>net.sf.gwt-widget</groupId>
            <artifactId>gwt-sl</artifactId>
            <version>0.1.5</version>
            <exclusions>
                <!-- Use libs provided by container -->
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.servlet</groupId>
                    <artifactId>servlet-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.gwt</groupId>
                    <artifactId>gwt-servlet</artifactId>
                </exclusion>
            </exclusions>
            <scope>compile</scope>
        </dependency>

        <!-- Quartz framework -->
       	<dependency>
       		<groupId>org.quartz-scheduler</groupId>
       		<artifactId>quartz</artifactId>
       	</dependency>

        <!--<dependency>-->
            <!--<groupId>postgresql</groupId>-->
            <!--<artifactId>postgresql</artifactId>-->
            <!--<version>8.4-701.jdbc4</version>-->
        <!--</dependency>-->

        <!--<dependency>-->
            <!--<groupId>hsqldb</groupId>-->
            <!--<artifactId>hsqldb</artifactId>-->
        <!--</dependency>-->

        <dependency>
            <groupId>org.easymock</groupId>
            <artifactId>easymock</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.unearthed</groupId>
            <artifactId>backend</artifactId>
        </dependency>


    </dependencies>

</project>
